@@ -10,4 +10,6 @@ depth 0:           1 Machine (type #0)
   depth 2:         2 Core (type #2)
    depth 3:        2 PU (type #3)
 Special depth -3:  1 NUMANode (type #13)
+CPU kind #0 efficiency -1 cpuset 0x00000001
+  FrequencyMaxMHz = 800
 Topology not from this system
