@@ -44,4 +44,6 @@ depth 0:            1 Machine (type #0)
        depth 7:     4 Core (type #2)
         depth 8:    8 PU (type #3)
 Special depth -3:   1 NUMANode (type #13)
+CPU kind #0 efficiency -1 cpuset 0x000000ff
+  FrequencyMaxMHz = 1594
 Topology not from this system
